[UPDATE] 새로운 채팅방 생성 기능 완료

--- a/src/main/webapp/resources/css/messenger.css
+++ b/src/main/webapp/resources/css/messenger.css
@@ -27,9 +27,9 @@ input[id *= "popup"] + label + div > div { /* 모달창 */
 	top:56%;
 	left: 50%;
 	transform:translate(-50%,-50%);
-	width: 30%;
+	width: 35%;
 	min-width : 300px;
-	height: 50%;
+	height: 70%;
 	background: #fff;
 	z-index: 200 !important;
 	padding: 30px;
@@ -129,7 +129,7 @@ input[id *= "popup"] + label + div > label { /* 모달창 오픈 시 바탕 */
 
 
 /* 이 위에 삭제할 수도?? */
-
+/* 모달 콘텐츠*/
 #addChatRoomDiv {
 	text-align: left;
 }
@@ -140,56 +140,56 @@ input[id *= "popup"] + label + div > label { /* 모달창 오픈 시 바탕 */
 	margin: 10px 0 5px 0;
 }
 
-.dept_lb {
-	padding: 10px;
+input[id *= "memNo_"]{
+	display: inline-block;
+	width: 18px;
+	height: 18px;
 }
 
-input[id *= "dept_no"] {
-	display: none;
-}
-
-input[id *= "dept_no"] + label {
-	width: auto;
-	height: auto;
+input[id *= "memNo_"] + label {
+	width: clac(100% - 18px);
+	height: 18px;
 	text-align: left;
 	background: none;
 	font-size: 1rem;
-	font-weight: bold;	
+	font-weight: normal;	
+	line-height: 18px;
+	vertical-align: center;
+	padding: 0;
 }
 
-input[id *= "dept_no"] + label::before {
-  content:"";
-  background-image: url(../images/오른쪽화살표.png);
-  background-size: 1.1rem; 
-  width: 1.1rem;
-  height:1.1rem;
-  display:inline-block;  
+.modal_data {
+	display: block;
+	width: 100%;
+	margin: 10px;
 }
 
-input[id *= "dept_no"]:checked + label {
-	color:red;
+#search_box {
+	width: 100%;
+	height: 46px;
+	border-radius: 5px;
+	border: 1px solid #EAEAEA;
+	background-color:#EAEAEA;
+	background-image: url(../images/검색.png);
+	background-size: 25px;
+	background-repeat: no-repeat;
+	background-position: 5px center;
+	box-sizing: border-box;
+	padding: 0 40px;
+	font-size: 1rem;
 }
 
-input[id *= "dept_no"]:checked + label::before {
-  content:"";
-  background-image: url(../images/아래쪽화살표.png);
-  background-size: 1.1rem; 
-  width: 1.1rem;
-  height:1.1rem;
-  display:inline-block;  
+#form_btn {
+	width: 100px;
+	height: 46px;
+	background-color: #7BE66D;
+	color: #FFF;
+	font-size: 1rem;
+	border: 0;
+	border-radius: 5px;
+	box-sizing: border-box;
+	cursor: pointer;
 }
-
-input[id *= "dept_no"] + label + div {
-	margin-left: 40px;
-	width:auto;
-	max-height: 0;
-	overflow: hidden;
-}
-
-input[id *= "dept_no"]:checked + label + div {
-	max-height: 100%;
-}
-
 
 
 
