--- a/src/main/webapp/resources/css/bootstrap_include.css
+++ b/src/main/webapp/resources/css/bootstrap_include.css
@@ -13,61 +13,33 @@ body {
 	height : 100%;
 	display: grid;
 	grid-template-columns : 19% 62% 19%;
-	grid-template-rows : 75px 110px 85%;
+	/* grid-template-rows : 75px 110px 600px 200px ; */
+	grid-template-rows : 120px calc(95% - 120px) 5% ;
 }
+
 
 #header {
+	/* position: fixed;라서 grid 해당 안됨. */
+/* 		
 	grid-column : 1/4;
 	grid-row : 1/2;
-	background-color : #FFFFFF;
-}
-
-#side {
-	text-align: center;
-	grid-column : 1/2;
-	grid-row : 3/4;	
-	margin: 20px 0 100px 20px;
-	background: linear-gradient(35deg, rgba(123, 230, 109, 0.8), rgba(194, 243, 71, 0.8) ,rgba(228, 247, 186, 0.8),rgba(246, 255, 204, 0.8), rgba(255, 255, 240, 0.8));
-	border: 0.5px solid #EAEAEA;
-	border-radius: 10px;
-	padding-top:20px;
-	width: 100%;
-	height: 100%;
-	box-sizing: border-box;
-}
-
-#side_menu {
-	margin: auto;
-	margin-top: 20px;
-	margin-bottom: 20px;
-	background: #FFF;
-	border-radius: 10px;
-	width: 86%;
-	height: 86%;
-	box-sizing: border-box;
+	
+ */	
+ 	background-color : #FFFFFF;
+	position: fixed;
+	width:100%;
+	height:100px;
+	z-index:20;
 	
 }
 
-nav #label {
-	text-align: center;
-	font-weight: bold;
-	font-size: 1.25rem;
-	background-color: #C2F347; 
-	border-radius: 10px;
-	display:inline-block;
-	width: 75%;
-	padding: 10px 20px 10px 20px;
-	color: #000;
-}
-
-#content {
-	font-size: 1rem;
-	width: 100%;
-	height: 100%;
-	grid-column : 2/4;
-	grid-row : 3/4;
-	margin: 20px 50px;	
-	box-sizing: border-box;
+#header_container {
+	width : 100%;
+	height : 100%;
+	display: grid;
+	grid-template-columns : 20% 60% 20%;
+	grid-template-rows : 50% 50%;	
+	background-color : #E4F7BA;
 }
 
 #header_left {
@@ -82,21 +54,9 @@ nav #label {
 #company{
 	grid-column : 1/2;
 	grid-row : 2/3;	
-	font-size: 1.5rem;	
-	align-self: start;
-	justify-self: end;
-	margin: 0 30px 0 20px;
-	
-}
-
-#header_right {
-	width: 80%;
-	height: 80%;	
-	grid-column : 3/4;
-	grid-row : 1/2;	
-	place-self: start end;
-	box-sizing: border-box;	
-	margin: 20px 20px 0 0;
+	font-size: 1.4rem;	
+	place-self: start start;
+	margin: 0 30px 0 30px;
 }
 
 #header_center {
@@ -105,7 +65,6 @@ nav #label {
 	grid-column : 2/3;
 	grid-row : 2/3;
 	place-self: center center;
-	
 }
 
 #header_center ul {
@@ -127,40 +86,15 @@ nav #label {
 	cursor: pointer;
 }
 
-/* 말풍선 적절한 top 과 margin-left 로 위치조정 */
-[id*="arrow_box"] {
-  display: none;
-  position: absolute;
-  left: 7px;
-  top: 100px;
-  width: 100px;
-  padding: 8px;
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
-  border-radius: 8px;
-  background: #333;
-  color: #fff;
-  font-size: 14px;
-  text-align: center;
-}
 
-[id*="arrow_box"]:after {
-  position: absolute;
-  bottom: 100%;
-  left: 50%;
-  width: 0;
-  height: 0;
-  margin-left: -10px;
-  border: solid transparent;
-  border-color: rgba(51, 51, 51, 0);
-  border-bottom-color: #333;
-  border-width: 10px;
-  pointer-events: none;
-  content: ' ';
-}
-
-#header_navi [id*="navi"]:hover + [id*="arrow_box"]{
-  display: block;
+#header_right {
+	width: auto;
+	height: auto;	
+	grid-column : 3/4;
+	grid-row : 1/2;	
+	place-self: start end;
+	box-sizing: border-box;	
+	margin: 20px 20px 0 0;
 }
 
 #header_right_container {
@@ -168,12 +102,11 @@ nav #label {
 	height: 100%;
 	display: grid;
 	grid-template-columns: 50% 15% 35%;
-	grid-template-rows: 70% 10% 20% !important;
+	grid-template-rows: 80% 20%;
 	place-items : end end;
 	grid-row-gap: 5px;
 	border-bottom: 2px solid #C2F347;
 	padding-bottom: 10px;
-	
 
 }
 
@@ -185,21 +118,22 @@ nav #label {
 
 #login {
 	grid-column : 3/4;
-	grid-row : 3/4 !important;	
+	grid-row : 2/3;	
 	place-self: end center;
 	font-size: 0.8rem;
 }
 
 #login a {
 	text-decoration: none;
-
 }
 
 #hi {
 	grid-column : 1/3;
-	grid-row : 3/4 !important;		
+	grid-row : 2/3;		
 	font-size: 0.8rem;
 	place-self: end end;
+	width: 150px;
+	text-align: right;
 }
 
 #notification {
@@ -226,52 +160,34 @@ nav #label {
 	height: 0.9rem;
     width: 0.9rem;
     line-height: 0.9rem;
-
     text-align: center;
     display: inline-block;
     place-self: end end;
 	position: absolute;
 	bottom: 18px;
 	right: -8px;
-    z-index: 3;
-}
-@charset "UTF-8";
-
-body {
-	margin : 0;
-	width : calc(100% - 50px );
-	height : 100vh;
-	overflow-x:auto; 
-	box-sizing: border-box;
+    z-index: 50;
 }
 
-#grid_container {
-	width : 100%;
-	height : 100%;
-	display: grid;
-	grid-template-columns : 19% 62% 19%;
-	grid-template-rows : 75px 110px 85% ;
-}
-
-#header {
-	grid-column : 1/4;
-	grid-row : 1/2;
-	background-color : #FFFFFF;
-}
-
+ 
 #side {
 	text-align: center;
+	/* position: fixed;라서 grid 해당 안됨. */
+/* 	
 	grid-column : 1/2;
 	grid-row : 3/4;	
+*/
 	margin: 20px 0 100px 20px;
 	background: linear-gradient(35deg, rgba(123, 230, 109, 0.8), rgba(194, 243, 71, 0.8) ,rgba(228, 247, 186, 0.8),rgba(246, 255, 204, 0.8), rgba(255, 255, 240, 0.8));
 	border: 0.5px solid #EAEAEA;
 	border-radius: 10px;
 	padding-top:20px;
-	width: 100%;
-	height: 100%;
-	max-height : 600px;
+	width: 16%;
+	height:79%;
 	box-sizing: border-box;
+	position: fixed;
+	top: 120px;
+	left: 0;
 }
 
 #side_menu {
@@ -281,8 +197,9 @@ body {
 	background: #FFF;
 	border-radius: 10px;
 	width: 86%;
-	height: 86%;
+	height: 85%;
 	box-sizing: border-box;
+	overflow-x: hidden; 
 	
 }
 
@@ -303,67 +220,12 @@ nav label {
 	width: 100%;
 	height: 100%;
 	grid-column : 2/4;
-	grid-row : 3/4;
-	margin: 20px 50px;	
-	box-sizing: border-box;
-}
-
-#header_left {
-	grid-column : 1/2;
-	grid-row : 1/2;	
-	font-size: 3rem;
-	font-weight: bold;
-	place-self: start start;
-	margin: 10px 0 0 20px;
-}
-
-#company{
-	grid-column : 1/2;
-	grid-row : 2/3;	
-	font-size: 1.5rem;	
-	align-self: start;
-	justify-self: end;
-	margin: 0 30px 0 20px;
-	
-}
-
-#header_right {
-	width: 80%;
-	height: 80%;	
-	grid-column : 3/4;
-	grid-row : 1/2;	
-	place-self: start end;
-	box-sizing: border-box;	
-	margin: 20px 20px 0 0;
-}
-
-#header_center {
-	width: 100%;
-	height: 100%;
-	grid-column : 2/3;
 	grid-row : 2/3;
-	place-self: center center;
-	
-}
-
-#header_center ul {
-	width: 100%;
-	height: 100%;
-	float: center;
-	display:flex;
-	margin: 0;
-	padding: 20px 40px;
-	position: relative;
+	margin: 20px;	
 	box-sizing: border-box;
 }
 
-#header_center li {
-	width: 16.6%;
-	text-align: center;
-	align-self: center;
-	list-style: none;
-	cursor: pointer;
-}
+
 
 /* 말풍선 적절한 top 과 margin-left 로 위치조정 */
 [id*="arrow_box"] {
@@ -401,82 +263,4 @@ nav label {
   display: block;
 }
 
-#header_right_container {
-	width: 100%;
-	height: 100%;
-	display: grid;
-	grid-template-columns: 50% 15% 35%;
-	grid-template-rows: 80% 20%;
-	place-items : end end;
-	grid-row-gap: 5px;
-	border-bottom: 2px solid #C2F347;
-	padding-bottom: 10px;
-	
 
-}
-
-#profile_circle {
-	grid-column : 3/4;
-	grid-row : 1/2;	
-	place-self: center center;
-}
-
-#login {
-	grid-column : 3/4;
-	grid-row : 2/3;	
-	place-self: end center;
-	font-size: 0.8rem;
-}
-
-#login a {
-	text-decoration: none;
-
-}
-
-#hi {
-	grid-column : 1/3;
-	grid-row : 2/3;		
-	font-size: 0.8rem;
-	place-self: end end;
-}
-
-#notification {
-	grid-column : 2/3;
-	grid-row : 1/2;	
-	place-self: end end;
-	position: relative;
-	margin-right: 10px;
-	margin-bottom: 6px;
-	box-sizing: border-box;
-	width: auto;
-	height: auto;
-}
-
-#noti_img{
-	position: relative;
-}
-
-#noti_num {
-	font-size : 0.6rem;
-	color : white;
-	background-color: red;
-	border-radius: 50%;
-	height: 0.9rem;
-    width: 0.9rem;
-    line-height: 0.9rem;
-
-    text-align: center;
-    display: inline-block;
-    place-self: end end;
-	position: absolute;
-	bottom: 18px;
-	right: -8px;
-    z-index: 3;
-}
-.paging_div{
-	text-align: center;
-}
-.paging{
-	display: inline-block;
-	margin-right: 15vw;
-}
