--- a/src/main/webapp/resources/css/address.css
+++ b/src/main/webapp/resources/css/address.css
@@ -301,7 +301,7 @@ input[id *= "popup"] + label + div > label {
 	width: 100%;
 	height: 100%;
 	display: grid;
-	grid-template-columns : 75% 25%;
+	grid-template-columns : 78% 22%;
 	grid-template-rows : 90% 10%;
 }
 
@@ -312,10 +312,12 @@ input[id *= "popup"] + label + div > label {
 }
 
 #right_chatRoomDetail{
-	background-color: #E4F7BA;
+	background-color: rgba(228, 247, 186, 0.6);
+	border: 1px solid #EAEAEA;
+	border-radius: 10px;
 	width: 0%;
 	display: none;
-	height: 100%;
+	height: 95%;
 	grid-column : 2/3;
 	grid-row : 1/3;	
 	z-index: 1;	
@@ -336,7 +338,7 @@ input[id *= "popup"] + label + div > label {
 	transition: all 0.4s;
 	position: fixed;
 	top: 50%;
-	left: 95%;
+	left: 95.6%;
 	z-index: 2;		
 }
 
@@ -344,7 +346,7 @@ input[id *= "popup"] + label + div > label {
 	transform: rotate(180deg);
 	position: fixed;
 	top: 50%;
-	left: 78%;
+	left: 81%;
 	transition: all 0.4s;
 	z-index: 2;	
 }
@@ -366,13 +368,13 @@ input[id *= "popup"] + label + div > label {
 	border: none;
 }
 
-.detai_icon {
+.detail_icon {
 	display: inline-block;
 	width: 40px;
 	text-align: left;
 	font-size: 0.8rem;
 	color: grey;
-	margin: 0 15px;
+	margin: 0 5px;
 }
 
 
@@ -414,7 +416,7 @@ input[id *= "popup"] + label + div > label {
 	margin: 20px;
 }
 
-#content hr{
+#addrHr{
 	width: 98%;
 	height: 2px;
 	background-color: #EAEAEA;
