--- a/src/main/webapp/resources/css/include.css
+++ b/src/main/webapp/resources/css/include.css
@@ -2,7 +2,7 @@
 
 body {
    margin : 0;
-   width : calc(100% - 50px );
+   width : calc(100% - 40px );
    height : 100vh;
    overflow-x:auto; 
    box-sizing: border-box;
@@ -14,7 +14,7 @@ body {
 	display: grid;
 	grid-template-columns : 19% 62% 19%;
 	/* grid-template-rows : 75px 110px 600px 200px ; */
-	grid-template-rows : 120px calc(95% - 120px) 5% ;
+	grid-template-rows : 60px calc(95% - 60px) 5% ;
 }
 
 
@@ -28,7 +28,7 @@ body {
  	background-color : #FFFFFF;
 	position: fixed;
 	width:100%;
-	height:100px;
+	height:60px;
 	z-index:20;	
 }
 
@@ -60,7 +60,7 @@ body {
 }
 
 #header_center {
-   width: 100%;
+   width: 50%;
    height: 100%;
    grid-column : 2/3;
    grid-row : 2/3;
@@ -94,7 +94,7 @@ body {
 	grid-row : 1/2;	
 	place-self: start end;
 	box-sizing: border-box;	
-	margin: 20px 20px 0 0;
+	margin: 10px 20px 0 0;
 }
 
 #header_right_container {
@@ -135,6 +135,7 @@ body {
 	place-self: end end;
 	width: 150px;
 	text-align: right;
+	line-height: 1.6rem;
 }
 
 #notification {
@@ -182,11 +183,11 @@ body {
 	border: 0.5px solid #EAEAEA;
 	border-radius: 10px;
 	padding-top:20px;
-	width: 16%;
-	height:79%;
+	width: 17%;
+	height:82%;
 	box-sizing: border-box;
 	position: fixed;
-	top: 120px;
+	top: 90px;
 	left: 0;
 }
 
@@ -220,7 +221,7 @@ nav label {
    height: 100%;
    grid-column : 2/4;
    grid-row : 2/3;
-   margin: 20px;   
+   margin: 50px 20px 20px 20px;   
    box-sizing: border-box;
 }
 
@@ -228,7 +229,7 @@ nav label {
 
 /* 말풍선 적절한 top 과 margin-left 로 위치조정 */
 [id*="arrow_box"] {
-  display: none;
+	display:none;
   position: absolute;
   left: 7px;
   top: 100px;
