--- a/src/main/webapp/resources/css/messenger.css
+++ b/src/main/webapp/resources/css/messenger.css
@@ -343,7 +343,7 @@ input[name *= accordion_cb_] {
 /* 채팅방(article 부분) CSS  */
 
 #bottom_input {
-	width: 61%;
+	width: 62.8%;
 	position: fixed;
     top: 91%; 
 }
@@ -373,8 +373,9 @@ input[name *= accordion_cb_] {
 }
 
 #messages {
-	width: 100%;
-	height: 100%;
+	border-radius: 10px;
+	width: 97.6%;
+	height: 96%;
 	padding: 20px 10px;
 	grid-column : 1/2;
 	grid-row : 1/2;	
@@ -384,6 +385,8 @@ input[name *= accordion_cb_] {
 	line-height: 2rem;
 	box-sizing: border-box;
 	transition: all 0.4s;
+	background: linear-gradient(35deg, rgba(228, 247, 186, 0.8),rgba(246, 255, 204, 0.8));
+	z-index: -1
 	
 }
 
@@ -394,7 +397,7 @@ input[name *= accordion_cb_] {
 	width: 100%;
 	height: 100%;
 	display: grid;
-	grid-template-columns : 75% 25%;
+	grid-template-columns : 78% 22%;
 	grid-template-rows : 90% 10%;
 }
 
@@ -404,7 +407,7 @@ input[name *= accordion_cb_] {
 	border: 1px solid #EAEAEA;
 	border-radius: 10px;
 	width: 100%;
-	height: 100%;
+	height: 95%;
 	grid-column : 2/3;
 	grid-row : 1/3;	
 	padding: 20px 20px 20px 40px;
@@ -626,7 +629,7 @@ input[name *= accordion_cb_] {
 	background-size: 50px; 	
 	position: fixed;
 	top: 50%;
-	left: 78%;
+	left: 81%;
 	cursor: pointer;
 	transition: all 0.4s;
 	z-index: 2;
@@ -636,7 +639,7 @@ input[name *= accordion_cb_] {
 	transform: rotate(180deg);
 	position: fixed;
 	top: 50%;
-	left: 95%;	
+	left: 95.6%;	
 	transition: all 0.4s;
 }
 
