--- a/src/main/webapp/resources/css/project/project_board.css
+++ b/src/main/webapp/resources/css/project/project_board.css
@@ -1,11 +1,11 @@
 @charset "UTF-8";
 body{
-	background-color: #E4F7BA;
-	height: 100%;
+   background-color: #E4F7BA;
+   height: 100%;
 }
  #content{
-	height:100%;
-	outline: none;
+   height:100%;
+   outline: none;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -19,36 +19,36 @@ body{
     z-index: 0;
 }
 .row:first-child{
-	margin-left: 10px;
+   margin-left: 10px;
 }
 
 .col{
-	max-width: 300px;
-	height:100%;
-	padding-left: 5px;
-	padding-right: 5px;
-	min-width: 300px;
+   max-width: 300px;
+   height:100%;
+   padding-left: 5px;
+   padding-right: 5px;
+   min-width: 300px;
 }
 
 .border-success{
-	box-shadow: var(--ds-shadow-raised,0 1px 0 #091e4240);
+   box-shadow: var(--ds-shadow-raised,0 1px 0 #091e4240);
 }
 
 .plus{
-	display: inline-block;
+   display: inline-block;
 }
 .card{
-	margin-bottom: 10px !important;
-	max-height: 95%;
+   margin-bottom: 10px !important;
+   max-height: 95%;
 }
 .card-body, .card-header{
-	padding: 8px;
-	font-size: 13px;
+   padding: 8px;
+   font-size: 13px;
 }
 
 .plus_card{
-	padding-top: 16px;
-	padding-bottom: 0;
+   padding-top: 16px;
+   padding-bottom: 0;
 }
 
 .u-fancy-scrollbar::-webkit-scrollbar {
@@ -62,12 +62,12 @@ body{
     padding: 0 4px;
     z-index: 1;
     overflow: auto;
-    max-height: 775px;
+    max-height: 720px;
     min-width: 239px;
 }
 .card_title_hr{
-	margin-top: 5px;
-	margin-bottom: 0;
+   margin-top: 5px;
+   margin-bottom: 0;
 }
  .portlet-placeholder {
    border: 1px dotted black;
@@ -75,60 +75,74 @@ body{
    height: 106px;
  }
  .textarea{
- 	resize: none;
+    resize: none;
  }
  .btn-primary{
-	background-color:#7BE66D;
-	border-style: none;
-	width:100%;
+   background-color:#7BE66D;
+   border-style: none;
+   width:100%;
  }
  .btn-primary:hover{
-	background-color:#C2F347;
+   background-color:#C2F347;
  }
  .modal_label {
-	text-align: center;
-	margin: 15px 0px 10px 0px;	
-	border: 0;	
-	border-radius: 5px;	
-	box-sizing: border-box;	
-	width: 100px;
-	height: 46px;
-	font-size: 0.9rem;
-	font-weight: bold;		
-	display: inline-block;
-	padding: 12px 3px;
-	background: #7BE66D;
-	color: #FFF;
-	cursor: pointer;
+   text-align: center;
+   margin: 15px 0px 10px 0px;   
+   border: 0;   
+   border-radius: 5px;   
+   box-sizing: border-box;   
+   width: 100px;
+   height: 46px;
+   font-size: 0.9rem;
+   font-weight: bold;      
+   display: inline-block;
+   padding: 12px 3px;
+   background: #7BE66D;
+   color: #FFF;
+   cursor: pointer;
   }
   .modal_label a{
-  	text-decoration: none;
-  	color:white;
+     text-decoration: none;
+     color:white;
   }
   .status_list{
-  	text-align: left;
+     text-align: left;
   }
   .status_list_div{
-	text-align: left;
+   text-align: left;
   }
   .member_list{
-  	text-align: left;
+     text-align: left;
   }
   .member_list_div{
-	text-align: left;
+   text-align: left;
   }
   .portlet{
-  	min-height: 106px;
+     min-height: 106px;
   }
   .portlet:hover{
-	background-color: #F5FFFA;
+   background-color: #F5FFFA;
   }
   .btn-outline-primary{
-  	background-color: white;
-  	color:black;
-  	border-style:none;
+     background-color: white;
+     color:black;
+     border-style:none;
   }
   .btn-check:checked+.btn, .btn.active, .btn.show, .btn:first-child:active, :not(.btn-check)+.btn:active {
     color: var(--bs-btn-active-color);
     background-color: #7BE66D;
     border-color: var(--bs-btn-active-border-color);
+  }
+  ::-webkit-scrollbar {
+    width: 3px;
+    border-radius: 10px;
+    height: 9px;
+}
+::-webkit-scrollbar-track {
+    background-color: lightgrey;
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+}
