[UPDATE]새로운 대화 추가 시 채팅방 중복 출력되는 에러 해결  * 최종 커밋  [STYLE]채팅방 스크롤 수정
* # [ADD]CSS파일 추가  [UPDATE]main.jsp 수정[STYLE]CSS include 파일 추가

* [ADD]이미지 파일 추가 [UPDATE]includ,main작업 [REMOVE]test용 페이지 제거 [STYLE]include.css 작성중

* [STYLE]include파일 수정 [UPDATE]include 페이지 수정

* [ADD]주소록 파일 생성 [UPDATE]include 파일 수정

* [UPDATE] 주소록 사이드 아코디언 메뉴, 모달창 추가

[UPDATE] 주소록 사이드 아코디언 메뉴, 모달창 추가

* [UPDATE]include,address 수정 [CSS]include 페이지 이동 시 정렬 깨지는 것 수정

[UPDATE]include,address 수정 [CSS]include 페이지 이동 시 정렬 깨지는 것 수정

* [UPDATE] 주소록 구성원 초대 추가

* [ADD] 주소록 관련 DTO,DAO 추가 [UPDATE] 조직도 부서 조회

* [REFACTOR] Controller, xml 따로 빼기

* [UPDATE] 부서 별 주소록 조회 AJAX 기능추가

* [UPDATE] 주소록 부서별 조회 기능 완성

* [UPDATE]주소록 검색 기능 추가

* [UPDATE]VIP 체크 기능 추가, 연락처 추가 기능 완료

* [ADD]메신저 관련 파일 생성

* 정상구동 중간 커밋

* [ADD]메신저 관련 파일 생성

* [UPDATE]메신저 채팅목록 조회 기능 추가

* [STYLE] 인클루드 파일 수정

* [UPDATE]채팅 중간 커밋

* 정상구동 커밋

* 중간커밋

* [update] 채팅방 별 메세지 불러오기

* include 날아간 거 복구

* [UPDATE]채팅 메세지 DB 저장 기능 완료

* [UPDATE]채팅 메세지 DB 저장 기능 완료

* [STYLE] 채팅방 CSS 추가

* [STYLE]include 헤더 크기 수정

* [UPDATE]채팅방 세로운 대화 기능 추가중 [STYLE]채팅방 세로운 대화 모달창 CSS 추가

* [UPDATE]주소록 연락처 상세정보 조회 기능 완료

* [UPDATE] 새로운 채팅방 생성 기능 완료

* [UPDATE] 채팅방 상세정보 조회 기능 완료

* [UPDATE] 메시지 알림 기능 완료

* [UPDATE] 채팅방 프론트 수정

* 중간점검 커밋

* 중간점검

* 중간 점검1

* Update include.css

* Revert "중간 점검1"

This reverts commit 9e75aab8a66a3374c8245901358f21b39ff96940.

* [UPDATE] 정상구동 커밋

* [UPDATE] 마지막 커밋

* [STYLE] 인클루드 CSS 변경

* [UPDATE] 메인페이지 메신저로 수정

* [STYLE] 인클루드 메뉴 CSS 추가

* [UPDATE] 고객연락처 추가 폼 placeholder 수정

* [STYLE]인클루드 메뉴 라벨 위치 변경

* [UPDATE]새로운 대화 추가 시 채팅방 중복 출력되는 에러 해결

* 최종 커밋

* [STYLE]채팅방 스크롤 수정

--- a/src/main/webapp/resources/css/include.css
+++ b/src/main/webapp/resources/css/include.css
@@ -178,7 +178,7 @@ body {
    grid-column : 1/2;
    grid-row : 3/4;   
 */
-	margin: 20px 0 100px 20px;
+	margin: 20px 0 0px 20px;
 	background: linear-gradient(35deg, rgba(123, 230, 109, 0.8), rgba(194, 243, 71, 0.8) ,rgba(228, 247, 186, 0.8),rgba(246, 255, 204, 0.8), rgba(255, 255, 240, 0.8));
 	border: 0.5px solid #EAEAEA;
 	border-radius: 10px;
@@ -218,7 +218,7 @@ nav label {
 #content {
    font-size: 1rem;
    width: 100%;
-   height: 100%;
+   height: 98%;
    grid-column : 2/4;
    grid-row : 2/3;
    margin: 50px 20px 20px 20px;   
@@ -231,8 +231,6 @@ nav label {
 [id*="arrow_box"] {
 	display:none;
   position: absolute;
-  left: 7px;
-  top: 100px;
   width: 100px;
   padding: 8px;
   -webkit-border-radius: 8px;
@@ -240,8 +238,29 @@ nav label {
   border-radius: 8px;
   background: #333;
   color: #fff;
-  font-size: 14px;
+  font-size: 0.7rem;
   text-align: center;
+  top: 70px;
+}
+
+#arrow_box01 {
+  left: 3%;
+}
+
+#arrow_box02 {
+  left: 16.5%;
+}
+
+#arrow_box03 {
+  left: 30.5%;
+}
+
+#arrow_box04 {
+  left: 44%;
+}
+
+#arrow_box05 {
+  left: 57.5%;
 }
 
 [id*="arrow_box"]:after {
@@ -259,6 +278,10 @@ nav label {
   content: ' ';
 }
 
-#header_navi [id*="navi"]:hover + [id*="arrow_box"]{
+
+
+[id*="navi"]:hover + [id*="arrow_box"]{
   display: block;
 }
+
+
