--- a/src/main/webapp/resources/css/messenger.css
+++ b/src/main/webapp/resources/css/messenger.css
@@ -235,6 +235,7 @@ input[id *= "memNo_"] + label {
 	cursor: pointer;
 }
 
+
 #messenger_chatList + label {
 	background: none;
 	text-align: left;
@@ -249,6 +250,83 @@ input[id *= "memNo_"] + label {
 }
 
 /* 사이드바 메뉴 대화 목록 아코디언 */
+/* messenger.jsp주석 풀고 그리드 다시 사용 시 여기 주석 풀면 됨!!! 현재 .chat_room은 삭제하고 쓰기*/
+.chat_room {
+	padding: 0px;
+	background: none;
+	font-size: 1rem;
+	font-weight: normal;
+	text-align: left;
+	cursor: pointer;
+	padding-right: 8px;
+	margin: 10px 20px 0 20px;
+}
+/*
+.chatRoom_grid_container {
+	width: 100%;
+	height: 100%;
+	display: grid;
+	grid-template-columns : 58% 12% 30%;
+	grid-template-rows : 50% 50%;	
+	margin: 20px 0px;
+	grid-row-gap: 3px;
+	
+}
+
+.chat_room {
+	padding: 0px;
+	grid-column : 1/2;
+	grid-row : 1/2;		
+	background: none;
+	font-size: 0.8rem;
+	font-weight: normal;
+	text-align: left;
+	cursor: pointer;
+	padding-right: 8px;
+	overflow: hidden;
+}
+
+.chatMemCount{
+	text-align:left;
+	grid-column : 2/3;
+	grid-row : 1/2;		
+	font-size: 0.8rem;
+	color: grey;
+}
+
+.lastMessage{
+	width: 100%;
+	height: 0.8rem;
+	grid-column : 1/3;
+	grid-row : 2/3;	
+	font-size: 0.6rem;
+	color: grey;
+	overflow: hidden;
+	place-self: center start;
+}
+
+.lastDate {
+	grid-column : 3/4;
+	grid-row : 1/2;	
+	font-size: 0.5rem;
+	color: grey;		
+}
+
+.unreadCount {
+	width: 0.8rem;
+	height: 0.8rem;
+	text-align:center;
+	grid-column : 3/4;
+	grid-row : 2/3;	
+	place-self: center end;
+	font-size: 0.6rem;
+	color: #FFF;
+	background-color: red;
+	border-radius: 50%;
+			
+}
+
+*/
 .chatList_div label {
 	font-size: 1rem;
 	padding: 8px 25px;
@@ -261,10 +339,6 @@ input[id *= "memNo_"] + label {
 
 .accordion_cb_div label{
 	float: left;
-}
-
-.accordion_cb_div {
-	text-align: left;
 }
 
 .messenger_label {
@@ -300,13 +374,13 @@ input[id *= "messenger_menu"] + label span {
 }
 
 .accordion_cb_div {
-	margin-left: 40px;
+	margin-left: 10px;
 	width:90%;
 	max-height: 0;
 	overflow: hidden;
 	box-sizing: border-box;
-	
 }
+
 
 input[id *= "messenger_menu"]:checked + label + div {
 	max-height: 100%;
@@ -332,13 +406,7 @@ input[name *= accordion_cb_] {
 	display: none;
 }
 
-.chat_room {
-	background: none;
-	font-size: 0.9rem;
-	font-weight: normal;
-	text-align: left;
-	cursor: pointer;
-}
+
 
 /* 채팅방(article 부분) CSS  */
 
@@ -346,6 +414,7 @@ input[name *= accordion_cb_] {
 	width: 62.8%;
 	position: fixed;
     top: 91%; 
+    box-sizing: border-box;
 }
 
 #messageinput {
@@ -385,8 +454,8 @@ input[name *= accordion_cb_] {
 	line-height: 2rem;
 	box-sizing: border-box;
 	transition: all 0.4s;
-	background: linear-gradient(35deg, rgba(228, 247, 186, 0.8),rgba(246, 255, 204, 0.8));
-	z-index: -1
+	background-color: rgba(228, 247, 186, 0.6); 
+	z-index: 1;
 	
 }
 
@@ -399,6 +468,7 @@ input[name *= accordion_cb_] {
 	display: grid;
 	grid-template-columns : 78% 22%;
 	grid-template-rows : 90% 10%;
+	box-sizing: border-box;
 }
 
 /* 우측 채팅방 상세 정보 */
@@ -407,7 +477,7 @@ input[name *= accordion_cb_] {
 	border: 1px solid #EAEAEA;
 	border-radius: 10px;
 	width: 100%;
-	height: 95%;
+	height: 96.5%;
 	grid-column : 2/3;
 	grid-row : 1/3;	
 	padding: 20px 20px 20px 40px;
